# Leporem-art-Chatting

./: .gitignore  Dockerfile  README.md  cloudformation.dev.yaml  cloudformation.yaml  pyproject.toml
src/leporem_art_chatting/: server.py  settings.py
src/leporem_art_chatting/settings/: __init__.py  develop.py  production.py
